  FlexDLL bootstrap procedure and existed solely for that purpose. Its removal
  greatly simplifies both the build system and testsuite machinery.
  (David Allsopp, review by Sébastien Hinderer)

- #12347: error messages: always report missing polyvariant tags
  (Florian Angeletti, report by Tianbo Hao, review by Gabriel Scherer)

### Internal/compiler-libs changes:

- #12216, #12248: Prevent reordering of atomic loads during instruction
  scheduling.  This is for reference, as instruction scheduling is currently
  unused in OCaml 5.
  (Xavier Leroy, report by Luc Maranget and KC Sivaramakrishnan,
   review by Nicolás Ojeda Bär)

- #12025: Split Typecore.unify_pat_types into two
  to avoid unnecessary references to the environment in type_pat
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #12031: Use dedicated types to represent names of compilation units
  and predefined exceptions in CMO files.
  (Sébastien Hinderer, review by Florian Angeletti, Thomas Refis,
  Gabriel Scherer, Vincent Laviron, Pierre Chambart, Luke Maurer,
  Hugo Heuzard, Xavier Leroy and Damien Doligez)

- #12109: Pack parameters to unification in unification_environment
  (Takafumi Saikawa and Jacques Garrigue, review by Richard Eisenberg)

- #12331, #12361: Pack the unification data for pattern checking in Typecore
  (Takafumi Saikawa and Jacques Garrigue,
   review by Gabriel Scherer, Thomas Refis and Florian Angeletti)

- #12229: Remove global mutable state for typechecking patterns
  in Typecore in favor of local mutable state.
  (Nick Roberts, review by Takafumi Saikawa)

### Build system:

- #12198: continue the merge of the sub-makefiles into the root Makefile
  started with #11243, #11248, #11268, #11420 and #11675.
  (Sébastien Hinderer, review by David Allsopp and Florian Angeletti)

### Bug fixes:

- #11931: Fix tricky typing bug with type substitutions
  (Stephen Dolan, review by Leo White and Jacques Garrigue)
