@@ -14,10 +14,10 @@ index 497af4ceed..3f264d87a5 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index aa80327189..fb74e584b2 100644
+index f0a85ce96c..a86c3aa3d0 100644
 --- a/Changes
 +++ b/Changes
-@@ -206,6 +206,7 @@ Working version
+@@ -210,6 +210,7 @@ Working version
    (Vincent Laviron, report by François Pottier, review by Nathanaëlle Courant
    and Gabriel Scherer)
  
@@ -25,7 +25,7 @@ index aa80327189..fb74e584b2 100644
  OCaml 5.1.0
  ---------------
  
-@@ -1667,6 +1668,35 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1671,6 +1672,35 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -61,7 +61,7 @@ index aa80327189..fb74e584b2 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1702,13 +1732,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1706,13 +1736,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -77,7 +77,7 @@ index aa80327189..fb74e584b2 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1815,6 +1845,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1819,6 +1849,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -87,7 +87,7 @@ index aa80327189..fb74e584b2 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -2078,6 +2111,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -2082,6 +2115,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10893,7 +10893,7 @@ index 0000000000..67b924972b
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..745bceee4b
+index 0000000000..70c64e08de
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10851 @@
@@ -10913,10 +10913,10 @@ index 0000000000..745bceee4b
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index aa80327189..fb74e584b2 100644
++index f0a85ce96c..a86c3aa3d0 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -206,6 +206,7 @@ Working version
++@@ -210,6 +210,7 @@ Working version
 +   (Vincent Laviron, report by François Pottier, review by Nathanaëlle Courant
 +   and Gabriel Scherer)
 + 
@@ -10924,7 +10924,7 @@ index 0000000000..745bceee4b
 + OCaml 5.1.0
 + ---------------
 + 
-+@@ -1667,6 +1668,35 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1671,6 +1672,35 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10960,7 +10960,7 @@ index 0000000000..745bceee4b
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1702,13 +1732,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1706,13 +1736,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10976,7 +10976,7 @@ index 0000000000..745bceee4b
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1815,6 +1845,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1819,6 +1849,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10986,7 +10986,7 @@ index 0000000000..745bceee4b
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -2078,6 +2111,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -2082,6 +2115,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
